gccida/c0/noce_get_condition
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_condition/src/ifcvt.c:1975:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v2; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_condition/src/ifcvt.c:1988:13: error: expected identifier or '('
 struct set = pc_set( jump); 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_condition/src/ifcvt.c:1991:69: error: invalid operands to binary expression ('uint64' (aka 'unsigned long long') and 'struct rtx_def')
v4 = *( _QWORD *)( *( _QWORD *)( *( _QWORD *)&set[1] + 24LL) + 8LL) == jump[4]; 
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^  ~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_condition/src/ifcvt.c:1994:50: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned __int16)*( _DWORD *)tmp == 61 && mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)tmp)] == MODE_INT ) 
                                                 ^~~~~~~~~~~~
                                                 mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_condition/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_condition/src/ifcvt.c:1999:27: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v2 = reverse_condition( ( rtx_code)( unsigned __int16)*( _DWORD *)cond); 
                          ^~~~~~~~
                          rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_condition/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_condition/src/ifcvt.c:1999:38: error: expected expression
v2 = reverse_condition( ( rtx_code)( unsigned __int16)*( _DWORD *)cond); 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_condition/src/ifcvt.c:2000:30: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( v2, ( machine_mode)BYTE2( *( _DWORD *)cond), tmp, *( rtx *)&cond[1]); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_condition/src/ifcvt.c:2023:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)tmpb)] == MODE_INT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_condition/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_get_condition/src/obj/ifcvt.o] Error 1
